# CanDI

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
CanDI/setup/: dataverse.py  install.py  manager.py
CanDI/setup/data/: config.draft.ini
candi/data/: __init__.py  _database.py  depmap.py
docs/: requirements.txt
notebooks/: add-new-datasets.ipynb
