[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCanDI"
version = "0.3.0"
description = "A cancer data integration package"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas",
    "polars",
    "anndata",
    "requests",
    "tqdm",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/GilbertLabUCSF/CanDI"

[project.scripts]
candi-install = "CanDI.setup.install:main"
candi-uninstall = "CanDI.setup.uninstall:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "test_*"]
